# Ed_Robot_Project

./: .gitignore  README.md  build_project.sh  ed_env.sh  run_ed_brain_offline.sh  setup_ai_ed_ws.sh  setup_environment.sh
ai_ed_ws/: .gitignore  Dockerfile  requirements-lock.txt
ai_ed_ws/src/action_orchestrator/: package.xml  setup.cfg  setup.py
ai_ed_ws/src/action_orchestrator/action_orchestrator/: orchestrator_node.py
ai_ed_ws/src/bringup/: package.xml  setup.cfg  setup.py
ai_ed_ws/src/bringup/bringup/launch/: system.launch.py
ai_ed_ws/src/bringup/launch/: ed_main.launch.py  system.launch.py
ai_ed_ws/src/dofbot_pro_KCF/: setup.py
ai_ed_ws/src/dofbot_pro_apriltag/: setup.py
ai_ed_ws/src/dofbot_pro_color/: setup.py
ai_ed_ws/src/dofbot_pro_depth/: setup.py
ai_ed_ws/src/dofbot_pro_driver/: package.xml  setup.py
ai_ed_ws/src/dofbot_pro_driver/dofbot_pro_driver/: apriltag_detect.py  arm_driver.py
ai_ed_ws/src/dofbot_pro_info/: package.xml
ai_ed_ws/src/dofbot_pro_interface/: package.xml
ai_ed_ws/src/dofbot_pro_interface/action/: SkillExecution.action
ai_ed_ws/src/dofbot_pro_interface/msg/: DofbotDetection3D.msg  DofbotDetection3DArray.msg
ai_ed_ws/src/dofbot_pro_interface/srv/: Speak.srv
ai_ed_ws/src/dofbot_pro_mediapipe/: setup.py
ai_ed_ws/src/dofbot_pro_vision/: setup.py
ai_ed_ws/src/dofbot_pro_voice_ctrl/: setup.py
ai_ed_ws/src/dofbot_pro_yolov11/: package.xml  setup.py
ai_ed_ws/src/dofbot_pro_yolov11/scripts/: ed_detector
ai_ed_ws/src/ed_core/: package.xml  setup.cfg  setup.py
ai_ed_ws/src/ed_core/chroma_db.bak.1755555863/5bc23b4f-255a-498a-9342-2409e3e7f78a/: index_metadata.pickle
ai_ed_ws/src/ed_core/ed_core/: __init__.py
ai_ed_ws/src/ed_core/ed_core/rag_service/: api.py  boot.py  config.py  context_shim.py  emb_onnx.py  summarize.py  system_prompt.md
ai_ed_ws/src/ed_core/ed_core/rag_service/services/: command.py  emb_router.py  llm.py  onnx_embedder.py  validation.py  vectorstore.py
ai_ed_ws/src/ed_core/scripts/: ed_brain  ed_brain_tmux  run_ed_brain
ai_ed_ws/src/ed_io_voice/: package.xml  setup.cfg  setup.py
ai_ed_ws/src/ed_io_voice/voice_interface/: ed_voice_node.py
ai_ed_ws/src/ed_planner/: package.xml  setup.cfg  setup.py
ai_ed_ws/src/ed_planner/ed_planner/: planner_node.py
ai_ed_ws/src/ed_skills/: package.xml  setup.cfg  setup.py
ai_ed_ws/src/ed_skills/ed_skills/: skill_server.py  skill_server.py.backup
ai_ed_ws/src/ed_skills/scripts/: go_home_skill
ai_ed_ws/src/ed_tests/: ed_make_plots.py  ed_plot_ctx_power_latency.py  ed_ros_introspect.py  ed_ros_introspect_fast.py  ed_system_overview.py  plot_ed_run.py  questions_25.txt  result_terminals  score_rag.py  summarize_run.py  test_ed_25.sh  uk_cost_energy_security_plots.py
ai_ed_ws/src/ed_tools/: ed_bridge_detections3d.py
ai_ed_ws/src/ed_vision/: package.xml  setup.cfg  setup.py
ai_ed_ws/src/robot_skills/: package.xml  setup.py
(+4 files in other folders)
