
# bringup  –  launch files that boot Ed on a single Jetson
[metadata]
name = bringup
version = 0.1.0
description = Launch suite for Ed 2.0
author = Ed Robotics
license = MIT

[options]
packages = find:

[options.packages.find]
exclude =
    test*

[options.package_data]
* = *          # include everything that isn’t caught by data_files

# Install launch files + ament index entry
[options.data_files]
share/ament_index/resource_index/packages =
    resource/bringup
share/bringup/launch =
    launch/*.py
    bringup/launch/*.py
