<?xml version="1.0"?>
<package format="3">
  <name>ed_core</name>
  <version>0.3.4</version>
  <description>The RAG/LLM core brain for the Ed robot.</description>

  <maintainer email="jetson@todo.todo">jetson</maintainer>
  <license>Apache-2.0</license>

  <!-- Use ament_python as the build tool for Python packages -->
  <buildtool_depend>ament_python</buildtool_depend>

  <!-- Runtime deps (keep as needed) -->
  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>rclpy</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
