[metadata]
name = ed_core
version = 0.3.4
description = The RAG/LLM core brain for the Ed robot.
author = jetson
license = Apache-2.0

[options]
packages = find:
include_package_data = True
zip_safe = False

[options.packages.find]
where = .

[options.package_data]
ed_core.rag_service = system_prompt.md

[options.entry_points]
console_scripts =
    ed_brain = ed_core.rag_service.api:main
    run_ed_brain = ed_core.rag_service.api:main

[develop]
script_dir = $base/lib/ed_core

[install]
install_scripts = $base/lib/ed_core

[options.data_files]
share/ament_index/resource_index/packages = resource/ed_core
share/ed_core = package.xml
