<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>voice_interface</name>
  <version>0.0.1</version>
  <description>GPU-accelerated voice client node for Ed.</description>
  <maintainer email="jetson@todo.todo">jetson</maintainer>
  <license>Apache-2.0</license>
  <exec_depend>rclpy</exec_depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
