[metadata]
name = ed_io_voice
version = 0.1.0
description = Voice I/O interface for Ed 2.0 (Vosk STT, optional TTS)
author = Ed Robotics
license = MIT

[options]
packages = find:
install_requires =
    vosk>=0.3.45
    sounddevice>=0.4.6
    rclpy>=2.1.4

[options.packages.find]
exclude =
    test*

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = setuptools.build_meta
